# scrapy

./: .gitignore  .terraform.lock.hcl  .terraform.tfstate.lock.info  Dockerfile  create_zip.py  data_service.py  docker-compose.yaml  main.py  main.tf  pyproject.toml  requirements.txt  terraform.tfstate  terraform.tfstate.backup  vendors.py
.github/workflows/: genlist_deploy.yaml  terraform_deploy.yaml
src/: Dockerfile  auth.py  data_service.py  etl_service.py  main.py  mock_data.py
